Fix Sector component Grid-related spacing

--- a/source/assets/stylesheets/components/_sector.sass
+++ b/source/assets/stylesheets/components/_sector.sass
@@ -45,7 +45,7 @@
   &::before
     bottom: 0
     content: ''
-    left: 0
+    left: $g-gutter * 0.5
     position: absolute
     top: 0
     width: 100vw
@@ -53,7 +53,7 @@
 
   &:first-child::before
     left: auto
-    right: 0
+    right: -$g-gutter * 0.5
 
 // Hierarchy
 
